Fix scrollbar issues on Projects and Permissions pages

--- a/packages/components/src/theme/panel.scss
+++ b/packages/components/src/theme/panel.scss
@@ -66,14 +66,16 @@
 }
 
 .merged-panels-container {
-    padding: 0;
     background-color: $white;
-    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
-    border-left: none;
 
-    .panel {
-        margin: 0;
+    & .panel {
         border: none;
+        margin: 0;
+        border-radius: 0;
+        box-shadow: 0 1px 0 rgba(0, 0, 0, 0.05);
     }
+}
+
+.vertical-scroll-panel {
+    overflow: auto;
 }
